--- a/1° folha de estilo/basic.html
+++ b/1° folha de estilo/basic.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS: The Missing Manual -- Chapter 2</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="../assets/css3.ico" type="image/x-icon">
     <link href="http://fonts.googleapis.com/css?family=Gravitas+One" rel="stylesheet">
 </head>
 <body>
